# tonic-ping-pong

./: Cargo.toml  LICENSE  README.md  build.rs
proto/: pingpong.proto
src/: client.rs  server.rs
